# yonkomatic

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SETUP.md  SPEC.md  config.yaml  pyproject.toml
.github/workflows/: ci.yml  daily-publish.yml  test-slack.yml  weekly-scenarios.yml
content/: README.md  prompt.md
content/images/: README.md
docs/: ROADMAP.md
examples/minimal/: prompt.md  sample-scenario.json  sample-scenario.yaml
examples/minimal/characters/: settings.md
examples/minimal/images/: README.md
examples/minimal/samples/: STYLE.md
examples/minimal/themes/: default.md
examples/minimal/world/: settings.md
scripts/: install_fonts.py
src/yonkomatic/: cli.py  config.py
src/yonkomatic/ai/: claude_client.py  gemini_client.py  openai_client.py
src/yonkomatic/news/: fetcher.py
src/yonkomatic/panel/: composer.py  description.py  validator.py
src/yonkomatic/publisher/: __init__.py  base.py  slack.py  static_site.py
src/yonkomatic/publisher/templates/: index.html.j2  post.html.j2
src/yonkomatic/publisher/templates/static/: style.css
src/yonkomatic/scenario/: generator.py  schema.py
src/yonkomatic/state/: repo.py
src/yonkomatic/template/: __init__.py  render.py
src/yonkomatic/templates/: __init__.py  panel_prompt.md  scenario_prompt.md
tests/: test_batch_manifest.py  test_news_fetcher.py  test_panel_description.py  test_publisher_static_site.py  test_scenario_schema.py  test_state_repo.py
